[gd_scene load_steps=19 format=3 uid="uid://cadbynglapao6"]

[ext_resource type="Script" path="res://Game/UI/UIHUD.gd" id="1_fijvq"]
[ext_resource type="Script" path="res://Game/UI/UITextEdit.gd" id="2_hmhtx"]
[ext_resource type="Texture2D" uid="uid://vmkxsw3br4xc" path="res://Game/UI/buttonNormal.png" id="2_p3d2s"]
[ext_resource type="Texture2D" uid="uid://dgxnj3fck7hh1" path="res://Game/weapons/swords/sword_01.png" id="3_cy5yh"]
[ext_resource type="Script" path="res://Game/UI/UIPlayerHP.gd" id="4_8xus5"]
[ext_resource type="Texture2D" uid="uid://bucgau2pjkf34" path="res://Game/weapons/shields/shield_01.png" id="4_mxhpl"]
[ext_resource type="Texture2D" uid="uid://x6sxmnn6yck7" path="res://Game/UI/slasher.png" id="5_osh7r"]
[ext_resource type="Script" path="res://Game/UI/UIattack_image.gd" id="6_5c7my"]
[ext_resource type="Script" path="res://Game/UI/UIplayer_atk_image.gd" id="9_2086k"]

[sub_resource type="SystemFont" id="SystemFont_thy28"]
subpixel_positioning = 0

[sub_resource type="Theme" id="Theme_sbmf6"]
default_font = SubResource("SystemFont_thy28")
default_font_size = 25

[sub_resource type="Theme" id="Theme_msuai"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ej1fv"]
bg_color = Color(0.415686, 0.027451, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ulex7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hv8fc"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_e0oq7"]
bg_color = Color(0.6, 0.6, 0.6, 0)
draw_center = false
shadow_color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kh327"]
bg_color = Color(1, 0, 0, 0.705882)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y3ohp"]
bg_color = Color(0, 1, 0, 0.705882)

[node name="UIskeleton" type="Node2D"]
self_modulate = Color(0.305882, 0.929412, 1, 1)

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("1_fijvq")

[node name="MarginContainer" type="MarginContainer" parent="HUD"]
z_index = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 73.0
offset_top = -131.0
offset_right = -81.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 0
size_flags_vertical = 4
theme = SubResource("Theme_sbmf6")
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="TextBoxPanel" type="Panel" parent="HUD/MarginContainer"]
self_modulate = Color(1, 1, 1, 0.160784)
layout_mode = 2
mouse_default_cursor_shape = 2
theme = SubResource("Theme_msuai")
theme_override_styles/panel = SubResource("StyleBoxFlat_ej1fv")

[node name="info_label" type="TextEdit" parent="HUD/MarginContainer/TextBoxPanel"]
layout_mode = 0
offset_top = -18.0
offset_right = 916.0
offset_bottom = 113.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_ulex7")
theme_override_styles/focus = SubResource("StyleBoxFlat_hv8fc")
theme_override_styles/read_only = SubResource("StyleBoxFlat_e0oq7")
text = "Welcome to Rogo-Boudroum! Level 1.
You don't remember why or how you got here.
Suddenly you find yourself in a dungeon..."
editable = false
context_menu_enabled = false
shortcut_keys_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false
virtual_keyboard_enabled = false
middle_mouse_paste_enabled = false
wrap_mode = 1
scroll_smooth = true
script = ExtResource("2_hmhtx")

[node name="ItemButtonsContainer" type="HBoxContainer" parent="HUD"]
self_modulate = Color(0.305882, 0.929412, 1, 1)
offset_right = 452.0
offset_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Item0" type="Button" parent="HUD/ItemButtonsContainer"]
self_modulate = Color(0.305882, 0.929412, 1, 1)
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
button_mask = 0
text = "STR"
expand_icon = true

[node name="STR_UI" type="Button" parent="HUD/ItemButtonsContainer"]
unique_name_in_owner = true
self_modulate = Color(0.305882, 0.929412, 1, 1)
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
button_mask = 0
text = "0"

[node name="Item2" type="Button" parent="HUD/ItemButtonsContainer"]
self_modulate = Color(0.305882, 0.929412, 1, 1)
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
button_mask = 0
text = "DEX"

[node name="DEX_UI" type="Button" parent="HUD/ItemButtonsContainer"]
unique_name_in_owner = true
self_modulate = Color(0.305882, 0.929412, 1, 1)
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
button_mask = 0
text = "0"

[node name="Item4" type="Button" parent="HUD/ItemButtonsContainer"]
self_modulate = Color(0.305882, 0.929412, 1, 1)
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
button_mask = 0
text = "WIS"

[node name="WIS_UI" type="Button" parent="HUD/ItemButtonsContainer"]
unique_name_in_owner = true
self_modulate = Color(0.305882, 0.929412, 1, 1)
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
button_mask = 0
text = "0"

[node name="Item6" type="Button" parent="HUD/ItemButtonsContainer"]
self_modulate = Color(0.305882, 0.929412, 1, 1)
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
button_mask = 0
text = "EYE"

[node name="EYE_UI" type="Button" parent="HUD/ItemButtonsContainer"]
unique_name_in_owner = true
self_modulate = Color(0.305882, 0.929412, 1, 1)
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
button_mask = 0
text = "0"

[node name="CharacterButtonsContainer" type="VBoxContainer" parent="HUD"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -160.0
offset_top = 186.0
offset_bottom = -209.0
grow_horizontal = 0
grow_vertical = 2

[node name="itemQ_btn" type="Button" parent="HUD/CharacterButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
text = "Q





"
icon = ExtResource("3_cy5yh")
icon_alignment = 1
expand_icon = true

[node name="itemE_btn" type="Button" parent="HUD/CharacterButtonsContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 160)
layout_mode = 2
text = "E





"
icon = ExtResource("4_mxhpl")
icon_alignment = 1
expand_icon = true

[node name="TextureTextBackground" type="TextureRect" parent="HUD"]
modulate = Color(1, 1, 1, 0.784314)
anchors_preset = -1
anchor_top = 0.803
anchor_right = 0.984
anchor_bottom = 1.0
offset_left = 7.0
offset_top = -56.16
offset_right = 33.28
offset_bottom = 64.155
texture = ExtResource("2_p3d2s")

[node name="PlayerHP" type="ProgressBar" parent="HUD"]
top_level = true
offset_left = 674.0
offset_top = 1.0
offset_right = 1072.0
offset_bottom = 59.0
theme_override_styles/background = SubResource("StyleBoxFlat_kh327")
theme_override_styles/fill = SubResource("StyleBoxFlat_y3ohp")
max_value = 10.0
step = 1.0
value = 10.0
show_percentage = false
script = ExtResource("4_8xus5")

[node name="attack_image" type="Sprite2D" parent="HUD"]
visible = false
self_modulate = Color(1, 1, 1, 0.615686)
position = Vector2(525, 282)
rotation = -0.303687
scale = Vector2(0.764, 0.728532)
texture = ExtResource("5_osh7r")
script = ExtResource("6_5c7my")

[node name="player_atk_image" type="Sprite2D" parent="HUD"]
visible = false
self_modulate = Color(1, 1, 1, 0.615686)
position = Vector2(525, 282)
rotation = -3.44528
scale = Vector2(0.5, 0.477)
texture = ExtResource("5_osh7r")
script = ExtResource("9_2086k")
